--- a/resume.tex
+++ b/resume.tex
@@ -9,8 +9,8 @@
 \usepackage{fontspec,xltxtra,xunicode}
 \defaultfontfeatures{ Path = /usr/local/texlive/2016/texmf-dist/fonts/opentype/public/fontawesome/ }
 
-\usepackage{fontawesome}
-\usepackage[sfdefault]{roboto}
+\usepackage{fontawesome5}
+\usepackage{accanthis}
 
 % Colors for links, text and headings
 \usepackage{hyperref}
@@ -49,24 +49,27 @@
 %	TITLE
 %----------------------------------------------------------------------------------------
 
-{\sffamily\Huge Edgardo Hames}
+{\sffamily\Huge Edgardo E. Hames}
 
 %----------------------------------------------------------------------------------------
 
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
-	
+
 
 
 \section{Specialization}
-Team Management and Leadership, Microservices, DevOps, High Availability Systems, Telecom Software Products, Operating Systems and Networks, Teaching\\[10pt]
+Team Management and Leadership, Data Science, EdTech, DevOps, Microservices,
+High Availability Systems, Telecom Software Products, 
+Operating Systems and Networks, Teaching\\[10pt]
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 
 \section{Work Experience} 
-\jobdesc{Co-founder}{Bitlogic.io}{2016}{Current}\\
+\jobdesc{Co-founder, Sr Eng Mgr}{Bitlogic}{2016}{Current}\\
+\normalsize{Lead multiple teams developing social-network exploration tools and next-gen Ed Tech solutions.}\\
 \\
 \jobdesc{Software Engineering Manager}{Arris}{2015}{2016}\\
 \normalsize{Designed micro-services for nDVR platform. Managed and coached engineering team (10 engineers). Delivered platform to multiple customers.}\\
@@ -109,6 +112,7 @@ Team Management and Leadership, Microservices, DevOps, High Availability Systems
 \faPhone & +54 (9 351) 316 0670 \\ % Phone number
 \faEnvelope & \href{mailto:ehames@bitlogic.io}{ehames@bitlogic.io} \\ % Email address
 \faSkype & {ehames} \\ % Skype
+\faLinkedin & \href{https://www.linkedin.com/in/ehames}{https://www.linkedin.com/in/ehames} \\ % Linkedin
 \faGithub & \href{http://github.com/ehames}{http://github.com/ehames} \\ % Website
 \end{tabular}
 }
@@ -123,10 +127,10 @@ Team Management and Leadership, Microservices, DevOps, High Availability Systems
 \begin{tabularx}{\textwidth}{ll}
 2009 & \large\textsc{MS-equiv in Computer Science}\\
 & \textit{FaMAF, UNC}\\
-\\
+%
 2002 & \large\textsc{Computing Analyst}\\
 & \textit{FaMAF, UNC}\\
-\\
+%
 1994 & \large\textsc{First Certificate in English}\\
 & s\textit{University of Cambridge}\\
 \end{tabularx}\\[10pt]
@@ -139,6 +143,10 @@ Team Management and Leadership, Microservices, DevOps, High Availability Systems
 \section{Teaching Experience} 
 
 \begin{tabular}{rl}
+2018-Current	& \textbf{Diploma Teacher}\\
+& \small Data Curation and Exploratory Analysis \\
+& \textit{FaMAF, UNC}\\
+
 2011	 & \textbf{Post-grad Teacher}\\
 & \small Operating Systems Implementation \\
 & \textit{FaMAF, UNC}\\
@@ -165,17 +173,14 @@ Team Management and Leadership, Microservices, DevOps, High Availability Systems
 \begin{tabular}{rl}
 \textsc{Languages}
 & Spanish, English\\
-\\ 
+%
 \textsc{Programming}
 & C, C++, Java, Ruby, Go\\
-\\
+%
 \textsc{Management}
 & Effective Communication, \\
 & Team Coordination,\\
 & Negotiation\\
-\\
-\textsc{Social}
-& Member of LUG \& FLOSS projects\\
 \end{tabular}\\[10pt]
 
 
@@ -186,9 +191,18 @@ Team Management and Leadership, Microservices, DevOps, High Availability Systems
 \section{Publications and Talks} 
 
 \begin{tabular}{rl}
-\textsc{Talk}
-& \textbf{Jobs for CS grads in Córdoba}\\
-& FaMAF, UNC, 2010\\
+
+\faSlideshare & \href{https://slideshare.net/edgardohames}{https://slideshare.net/edgardohames}\\
+\\
+
+\textsc{Paper}
+& \textbf{A Strategy for Container Lifecycle Management}\\
+& XLVII JAIIO, UTN FRC, 2017,\\
+& Electronic Journal of SADIO, 2018\\
+%& \\
+%\textsc{Talk}
+%& \textbf{Jobs for CS grads in Córdoba}\\
+%& FaMAF, UNC, 2010\\
 %& \\
 \textsc{Talk}
 & \textbf{Rapid web development using Ruby on  Rails}\\
