--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 
 
-\usepackage[hmargin=1.25cm, vmargin=1.5cm]{geometry} % Document margins
+\usepackage[hmargin=1.2cm, vmargin=1.2cm]{geometry} % Document margins
 
 \usepackage[usenames,dvipsnames]{xcolor} % Allows the definition of hex colors
 
@@ -49,14 +49,14 @@
 %	TITLE
 %----------------------------------------------------------------------------------------
 
-{\sffamily\Huge Edgardo E. Hames}
 
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
+\begin{minipage}[t]{0.48\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
 
 
+{\sffamily\Huge Edgardo E. Hames}
 
 \section{Specialization}
 Team Management and Leadership, Data Science, EdTech, DevOps, Microservices,
@@ -99,7 +99,7 @@ Operating Systems and Networks, Teaching\\[10pt]
 
 \end{minipage} % End the left-hand side of the page
 \hfill
-\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
+\begin{minipage}[t]{0.48\textwidth} % Start the right-hand side of the page
 \vspace{0pt} % Trick for alignment
 
 %----------------------------------------------------------------------------------------
@@ -143,7 +143,7 @@ Operating Systems and Networks, Teaching\\[10pt]
 \section{Teaching Experience} 
 
 \begin{tabular}{rl}
-2018-Current	& \textbf{Diploma Teacher}\\
+2018-2020 & \textbf{Diploma Teacher}\\
 & \small Data Curation and Exploratory Analysis \\
 & \textit{FaMAF, UNC}\\
 
@@ -152,11 +152,11 @@ Operating Systems and Networks, Teaching\\[10pt]
 & \textit{FaMAF, UNC}\\
 
 2010-2012	 & \textbf{Under-grad Teacher}\\
-& \small Programing Paradigms, Computer Networks \\
+& \small Programming Paradigms, Computer Networks \\
 & \textit{FaMAF, UNC}\\
 
 2003-2008	 & \textbf{Teaching Assistant (Student)}\\
-& \small Operating System, Computer Networks \\
+& \small Operating Systems, Computer Networks \\
 & \textit{FaMAF, UNC}\\
 
 2003-2004	 & \textbf{Linux development Instructor}\\
@@ -195,6 +195,9 @@ Operating Systems and Networks, Teaching\\[10pt]
 \faSlideshare & \href{https://slideshare.net/edgardohames}{https://slideshare.net/edgardohames}\\
 \\
 
+\textsc{Paper}
+& \textbf{Banco de pruebas para respiradores artificiales}\\
+& XLIX JAIIO,  2020\\
 \textsc{Paper}
 & \textbf{A Strategy for Container Lifecycle Management}\\
 & XLVII JAIIO, UTN FRC, 2017,\\
