--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,4 @@
+%!TeX program = xelatex
 \documentclass[10pt]{article}
 
 
@@ -110,7 +111,7 @@ Operating Systems and Networks, Teaching\\[10pt]
 \begin{tabular}{cp{6.85cm}}
 \faHome & \mbox{Av. Los Fresnos s/n, La Granja, Córdoba, 5115} \\ % Address
 \faPhone & +54 (9 351) 316 0670 \\ % Phone number
-\faEnvelope & \href{mailto:ehames@bitlogic.io}{ehames@bitlogic.io} \\ % Email address
+\faEnvelope & \href{mailto:ehames@gmail.com}{ehames@gmail.com} \\ % Email address
 \faSkype & {ehames} \\ % Skype
 \faLinkedin & \href{https://www.linkedin.com/in/ehames}{https://www.linkedin.com/in/ehames} \\ % Linkedin
 \faGithub & \href{http://github.com/ehames}{http://github.com/ehames} \\ % Website
@@ -132,7 +133,7 @@ Operating Systems and Networks, Teaching\\[10pt]
 & \textit{FaMAF, UNC}\\
 %
 1994 & \large\textsc{First Certificate in English}\\
-& s\textit{University of Cambridge}\\
+& \textit{University of Cambridge}\\
 \end{tabularx}\\[10pt]
 
 
@@ -198,6 +199,7 @@ Operating Systems and Networks, Teaching\\[10pt]
 \textsc{Paper}
 & \textbf{Banco de pruebas para respiradores artificiales}\\
 & XLIX JAIIO,  2020\\
+& Electronic Journal of SADIO, 2021\\
 \textsc{Paper}
 & \textbf{A Strategy for Container Lifecycle Management}\\
 & XLVII JAIIO, UTN FRC, 2017,\\
