added static analysis

--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 
 \section{Specialization}
 Team Management and Leadership, Data Science, EdTech, DevOps, Microservices,
-High Availability Systems, Telecom Software Products, 
+High Availability Systems, Static Analysis, Telecom Software Products, 
 Operating Systems and Networks, Teaching\\[10pt]
 
 %----------------------------------------------------------------------------------------
